<resources>
    <string name="app_name">HCCChat</string>

    <!-- Strings related to login -->
    <string name="login_title">CDC Chat Room</string>
    <string name="prompt_username">Username</string>
    <string name="prompt_password">Password</string>
    <string name="prompt_password_confirm">Password Confirm</string>
    <string name="action_login">LOGIN</string>
    <string name="action_register">REGISTER</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="action_back">Back</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="prompt_message">Input messages</string>

</resources>
